# geoglue

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  REUSE.toml  agg.ipynb  agg.py  agg.r  era5.py  memoryraster.py  noxfile.py  output-r.txt  pyproject.toml  requirements.txt  xarray_exactextract.ipynb
.github/workflows/: tests.yml  tests_aarch64.yml
archive/: agg.py  agg.r  output-python.txt  raster_methods.py
data/HCM/geoboundaries/: HCM-1.dbf  HCM-1.shp  HCM-1.shx  HCM-2.dbf  HCM-2.shp  HCM-2.shx
data/SGP/: SGP-ndvi-2015.nc  sgp_pop_2015_CN_1km_R2025A_UA_v1.tif
data/VNM/era5/: VNM-2020-era5.daily_sum.nc
data/VNM/geoboundaries/: geoBoundaries-VNM-ADM0.dbf
data/VNM/worldpop/: vnm_ppp_2000_1km_Aggregated_UNadj.tif
data/geoboundaries/VNM/: geoBoundaries-VNM-ADM2.dbf
docs/: _config.yml  _toc.yml  index.md
docs/reference/: geoglue.rst  modules.rst
docs/tutorial/: zonal_stats.ipynb
notebooks/: agg.ipynb  remapdis.ipynb  total_precipitation.ipynb  xarray_exactextract.ipynb
scripts/: install_cdo.sh  install_exactextract_build_deps.sh
src/geoglue/: __init__.py  attrs.py  cds.py  cli.py  config.py  country.py  dataset.py  era5.py  fetch_era5.py  gadm.py  memoryraster.py  merge.py  metrics.toml  paths.py  plot.py  region.py  resample.py  reshape.py  types.py  util.py  validate.py  zonal_stats.py  zonalstats.py  zonalstats_config.py
tests/: conftest.py  test_apply_ufunc.py  test_bounds.py  test_cds.py  test_config.py  test_country.py  test_griddes.py  test_memoryraster.py  test_region.py  test_resample.py  test_reshape.py  test_util.py  test_zonal_stats.py  test_zonalstats.py
tests/data/: BRB-2019-era5.accum.nc  BRB-2019-era5.instant.nc  BRB-2020-era5.accum.nc  BRB-2020-era5.instant.nc  BRB-2025-05-era5.accum.nc  BRB-2025-05-era5.instant.nc  BRB-2025-06_part-era5.accum.nc  BRB-2025-06_part-era5.instant.nc  SGP-2018-era5.accum.nc  SGP-2018-era5.instant.nc  SGP-2019-era5.accum.nc  SGP-2019-era5.instant.nc  SGP-2019-era5_grib.grib  SGP-2020-era5.accum.nc  SGP-2020-era5.instant.nc  SGP-2021-era5.accum.nc  SGP-2021-era5.instant.nc  SGP-2025-05-era5.accum.nc  SGP-2025-05-era5.instant.nc  SGP-2025-06_part-era5.accum.nc  SGP-2025-06_part-era5.instant.nc  regions.toml
