[project]
name = "geoglue"
version = "0.1.0"
description = "Glue functions to help with geospatial data fetch and aggregation"
readme = "README.md"
authors = [
    { name = "Abhishek Dasgupta", email = "abhishek.dasgupta@dtc.ox.ac.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "cdo>=1.6.1",
    "cdsapi>=0.7.5",
    "cfgrib>=0.9.15.0",
    "distributed>=2025.11.0",
    "exactextract>=0.2.0",
    "fastparquet>=2024.11.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.2",
    "pyarrow>=19.0.0",
    "pycountry>=24.6.1",
    "pytz>=2024.2",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
    "rioxarray>=0.19.0",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
    "xarray>=2025.1.1",
]

[project.optional-dependencies]
notebook = ["jupyterlab"]
docs = [
    "jupyter-book==1.*",
    "sphinx-markdown-builder==0.6.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.coverage.run]
omit = ["tests/*"]
